--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
         th {
             background-color: #71ff35;
         }
+
+        #footer a {
+            color: black;
+        }
     </style>
 
     <!--all the html-->
